fix: prevent language option text wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,6 +326,7 @@ Language Switch
 .sl-nav li .dropdown li span {
   padding-left: 5px;
   font-size: 1.3rem;
+  white-space: nowrap;
 }
 .sl-nav li .dropdown li span.active {
   color: var(--tag-color);
